--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logos/rplogo.png"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -61,12 +61,41 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To Our Studio!</div>
-        <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <div class="intro-lead-in">Grow you business through 1 billion Chinese Consumers with</div>
+        <div class="intro-heading text-uppercase" style="color: #45aed6">RiverPay</div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" style="background-color: #45aed6; border-color: #45aed6;" href="#services">Tell Me More</a>
       </div>
     </div>
   </header>
+
+
+  <section class="services bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Proud partners of Alipay, WeChat Pay and UnionPay</h2>
+          <h3 class="section-subheading text-muted">Anywhere in the world, we've got you covered.</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-sm-7">
+            <img class="img-fluid d-block mx-auto" src="img/logos/Alipay_logo.png" alt="">
+        </div>
+        <div class="col-md-4 col-sm-7">
+            <img class="img-fluid d-block mx-auto" src="img/logos/wechatpay.png" alt="">
+        </div>
+        <div class="col-md-4 col-sm-7">
+            <img class="img-fluid d-block mx-auto" src="img/logos/UnionPay_logo.png" alt="">
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center">
+          <p class="large text-muted">As an authorized payment service provider of all leading mobile payment options including Alipay, WeChat Pay and UnionPay mobile application, RiverPay allows merchants to tap into the world's largest payment platforms with a combined user base of 2 billion.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Services -->
   <section id="services">
@@ -74,33 +103,30 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Services</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Whether your business is online or offline, we've got a solution for you.</h3>
         </div>
       </div>
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            <img class="img-fluid" src="img/portfolio/devices.png" alt="">
           </span>
-          <h4 class="service-heading">E-Commerce</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">In-store Standalone</h4>
+          <p class="text-muted">RiverPay offers multiple standalone point-of-sale terminals for merchants who want to keep their existing POS separate. Integration is quick and seamless.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            <img class="img-fluid" src="img/portfolio/ecr.png" alt="">
           </span>
-          <h4 class="service-heading">Responsive Design</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">POS Integration</h4>
+          <p class="text-muted">RiverPay offers integrated solutions directly into existing cash register systems for merchants who do not want additional infrastructure. Same day integration for many POS systems.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+          <img class="img-fluid" src="img/portfolio/Shopping%20cart.png" alt="">
           </span>
-          <h4 class="service-heading">Web Security</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">E-commerce</h4>
+          <p class="text-muted">RiverPay offers a full set of online API gateway to support all website or mobile payment needs. Upon enrollment, RiverPay will provide dedicated technical support to guide the setup and a typical e-commerce or m-commerce integration takes less than a week.</p>
         </div>
       </div>
     </div>
@@ -111,7 +137,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Portfolio</h2>
+          <h2 class="section-heading text-uppercase">Our Solutions</h2>
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
@@ -123,11 +149,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/devices.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4>In-store Standalone</h4>
+            <p class="text-muted">RiverPay offers multiple standalone point-of-sale terminals for merchants who want to keep their existing POS separate. Integration is quick and seamless.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -137,11 +163,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/pos.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4>POS Integration</h4>
+            <p class="text-muted">RiverPay offers integrated solutions directly into existing cash register systems for merchants who do not want additional infrastructure. Same day integration for many POS systems.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
