--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Grow you business through 1 billion Chinese Consumers with</div>
+        <div class="intro-lead-in">Grow your business through 1 billion Chinese Consumers with</div>
         <div class="intro-heading text-uppercase" style="color: #45aed6">RiverPay</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" style="background-color: #45aed6; border-color: #45aed6;" href="#services">Tell Me More</a>
       </div>
@@ -133,7 +133,7 @@
   </section>
 
   <!-- Portfolio Grid -->
-  <section class="bg-light" id="portfolio">
+  <!-- <section class="bg-light" id="portfolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -228,10 +228,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- About -->
-  <section id="about">
+
+  <!-- <section id="about">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -309,10 +310,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Team -->
-  <section class="bg-light" id="team">
+ <!-- <section class="bg-light" id="team">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -400,30 +401,111 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Clients -->
-  <section class="py-5">
+  <section class="py-5 bg-light">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Our Clients</h2>
+          <h3 class="section-subheading text-muted">Join a growing list of world renowned brands that have recognized the power of RiverPay.</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.saksfifthavenue.com/Entry.jsp">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/saks_logo.png" alt="">
           </a>
         </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.thebay.com/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/hbc_logo.png" alt="">
           </a>
         </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
+        <div class="col-md-2 col-sm-5">
+          <a href="http://www.selfridges.com/GB/en/">
+            <img class="img-fluid d-block mx-auto" src="img/logos/selfridges_logo.png" alt="">
           </a>
         </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.holtrenfrew.com/">
+            <img class="img-fluid d-block mx-auto" src="img/logos/hf_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.tiffany.com/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/tiffany_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.prada.com/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/prada_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.dolcegabbana.com/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/dg_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.harryrosen.com/en/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/hr_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.ivanhoecambridge.com/en">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/ivan_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.sportinglife.ca/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/sport_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.brownsshoes.com/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/browns_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.thesavoylondon.com/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/savoy_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+        <a href="https://www.wempe.com/">
+          <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/wempe_logo.png" alt="">
+        </a>
+      </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.debeersgroup.com/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/debeers_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.maxmara.com/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/maxmara_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.londondrugs.com/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/londond_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://dilawri.ca/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/dilawri_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="https://www.porsche-design.com/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/porsche_logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-2 col-sm-5">
+          <a href="http://www.toysrus.ca/">
+            <img class="img-fluid d-block mx-auto rounded-circle z-depth-2" src="img/logos/toys_logo.png" alt="">
           </a>
         </div>
       </div>
@@ -480,7 +562,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">Copyright &copy; RiverPay Inc. 2019</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
