updates to pages

--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about" style="color: #13AAE0;">About</a>
+            <a class="nav-link js-scroll-trigger" href="about.html" style="color: #13AAE0;">About</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#team">Contact</a>
@@ -79,17 +79,17 @@
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img src="img/alipay2.PNG" style="max-width: 95%;">
+            <img src="img/about/alipay2.PNG" style="max-width: 95%;">
           </span>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img src="img/wechat.png" style="max-width: 95%;">
+            <img src="img/about/wechat.png" style="max-width: 95%;">
           </span>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img src="img/unionpay.png" style="max-width: 75%;">
+            <img src="img/about/unionpay.png" style="max-width: 75%;">
           </span>
         </div>
       </div>
@@ -107,19 +107,19 @@
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img src="img/abt_icon1.png">
+            <img src="img/about/abt_icon1.png">
           </span>
           <p class="text-muted">Incorporated in March 2017 with co-founders from high-technology and investment backgrounds.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-              <img src="img/abt_icon2.png">
+              <img src="img/about/abt_icon2.png">
             </span>
           <p class="text-muted">Presence in 18 countries spanning North America, Europe and Asia.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-              <img src="img/abt_icon3.png">
+              <img src="img/about/abt_icon3.png">
             </span>
           <p class="text-muted">Licensed by all leading payment platforms from China, including Alipay, WeChat Pay, and China UnionPay.</p>
         </div>
@@ -127,26 +127,26 @@
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-              <img src="img/abt_icon4.png">
+              <img src="img/about/abt_icon4.png">
             </span>
           <p class="text-muted">Patent pending integration technology with 80%+ of mainstream POS and ERP systems.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-              <img src="img/abt_icon5.png">
+              <img src="img/about/abt_icon5.png">
             </span>
           <p class="text-muted">Fully compliant payment services with FINCEN, FINTRAC, EMI registered (USD, CAD, EUR, GBP licensed).</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-              <img src="img/abt_icon6.png">
+              <img src="img/about/abt_icon6.png">
             </span>
           <p class="text-muted">Backed by top investors worldwide, including Marathon Venture Partners, DHVC, Extreme Venture Partner, Trilead Capital, among others</p>
         </div>
       </div>
     </div>
     <hr>
-    <img src="img/abt_logos.jpg" style="margin: auto; display: block; max-width:">
+    <img src="img/about/abt_logos.jpg" style="margin: auto; display: block; max-width:">
   </section>
 
   <!-- Contact -->
