--- a/service.html
+++ b/service.html
@@ -39,10 +39,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about" style="color: #13AAE0;">About</a>
+            <a class="nav-link js-scroll-trigger" href="about.html">About</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="service.html" style="color: #13AAE0;">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#team">Contact</a>
@@ -76,16 +76,16 @@
       </div>
       <div class="row">
         <div class="col-md-4" style="max-width: 25%;">
-            <img src="img/pt1.PNG" >
+            <img src="img/service/pt1.PNG" >
         </div>
         <div class="col-md-4" style="max-width: 25%;">
-            <img src="img/pt2.png">
+            <img src="img/service/pt2.png">
         </div>
         <div class="col-md-4" style="max-width: 25%;">
-            <img src="img/pt3.png" >
+            <img src="img/service/pt3.png" >
         </div>
         <div class="col-md-4 "style="max-width: 25%;">
-            <img src="img/pt4.png" >
+            <img src="img/service/pt4.png" >
         </div>
       </div>
     </div>
@@ -93,55 +93,22 @@
 
   <!-- Portfolio Grid -->
   <section class="bg-light" id="portfolio">
-    <div class="container">
-      <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Fast Facts</h2>
+          <h2 class="section-heading text-uppercase">Our Services</h2>
         </div>
-      </div>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <img src="img/abt_icon1.png">
-          </span>
-          <p class="text-muted">Incorporated in March 2017 with co-founders from high-technology and investment backgrounds.</p>
+
+        <div class="store-soln" style="padding: 1em;"> 
+          <h5 style="font-weight: 100; padding: 1em;">In Store Solutions</h5>
+          <img src="img/service/devices.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
+          <p style="margin-left: 25%;"> RiverPay offers multiple standalone point-of-sale terminals and integrated solutions directly into existing cashier systems for merchants to use right away. Integration will be completed in real time and there is no need to worry about reconciliation.</p>
         </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-              <img src="img/abt_icon2.png">
-            </span>
-          <p class="text-muted">Presence in 18 countries spanning North America, Europe and Asia.</p>
+        <br>
+        <div class="online-soln" style="padding: 1em;"> 
+          <h5 style="font-weight: 100; padding: 1em;">In Store Solutions</h5>
+          <img src="img/service/web.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
+          <p style="margin-left: 25%;"> RiverPay offers a full set of online API gateway to support all website or mobile payment needs. Upon enrollment, RiverPay will provide dedicated technical support to guide the setup and a typical e-commerce or m-commerce integration takes less than a week.</p>
         </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-              <img src="img/abt_icon3.png">
-            </span>
-          <p class="text-muted">Licensed by all leading payment platforms from China, including Alipay, WeChat Pay, and China UnionPay.</p>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-              <img src="img/abt_icon4.png">
-            </span>
-          <p class="text-muted">Patent pending integration technology with 80%+ of mainstream POS and ERP systems.</p>
-        </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-              <img src="img/abt_icon5.png">
-            </span>
-          <p class="text-muted">Fully compliant payment services with FINCEN, FINTRAC, EMI registered (USD, CAD, EUR, GBP licensed).</p>
-        </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-              <img src="img/abt_icon6.png">
-            </span>
-          <p class="text-muted">Backed by top investors worldwide, including Marathon Venture Partners, DHVC, Extreme Venture Partner, Trilead Capital, among others</p>
-        </div>
-      </div>
-    </div>
-    <hr>
-    <img src="img/abt_logos.jpg" style="margin: auto; display: block; max-width: 100%;">
+      
   </section>
 
   <!-- Contact -->
