created career page and updated other pages

--- a/service.html
+++ b/service.html
@@ -45,10 +45,10 @@
               <a class="nav-link js-scroll-trigger" href="service.html" style="color: #13AAE0;">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Career</a>
+            <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
           </li>
         </ul>
       </div>
@@ -97,16 +97,32 @@
           <h2 class="section-heading text-uppercase">Our Services</h2>
         </div>
 
-        <div class="store-soln" style="padding: 1em;"> 
+        <div class="store-soln" style="padding: 3em;"> 
           <h5 style="font-weight: 100; padding: 1em;">In Store Solutions</h5>
           <img src="img/service/devices.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
           <p style="margin-left: 25%;"> RiverPay offers multiple standalone point-of-sale terminals and integrated solutions directly into existing cashier systems for merchants to use right away. Integration will be completed in real time and there is no need to worry about reconciliation.</p>
         </div>
-        <br>
-        <div class="online-soln" style="padding: 1em;"> 
+        <div class="online-soln" style="padding: 3em;"> 
           <h5 style="font-weight: 100; padding: 1em;">In Store Solutions</h5>
           <img src="img/service/web.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
           <p style="margin-left: 25%;"> RiverPay offers a full set of online API gateway to support all website or mobile payment needs. Upon enrollment, RiverPay will provide dedicated technical support to guide the setup and a typical e-commerce or m-commerce integration takes less than a week.</p>
+        </div>
+        <div class="report-soln" style="padding: 3em;"> 
+            <h5 style="font-weight: 100; padding: 1em;">Reporting & Settlement</h5>
+            <img src="img/logo.png" style="width: 13em; float: left; padding: 1em; padding-top: 0;">
+            <p style="margin-left: 25%;"> RiverPay offers real-time reporting of transactions as well as detailed daily and monthly transaction level settlement reports designed for all kinds of merchants from enterprises to SMEs.</p>
+        </div>
+        <br>
+        <div class="market-soln" style="padding: 3em;"> 
+            <h5 style="font-weight: 100; padding: 1em;">Marketing Solutions</h5>
+            <img src="img/service/marketing.png" style="width: 13em; float: left; padding: 1em; padding-top: 0;">
+            <p style="margin-left: 25%;"> RiverPay offers real-time reporting of transactions as well as detailed daily and monthly transaction level settlement reports designed for all kinds of merchants from enterprises to SMEs.</p>
+        </div>
+        <br>
+        <div class="secure-soln" style="padding: 3em;"> 
+            <h5 style="font-weight: 100; padding: 1em;">Security and Compliance</h5>
+            <img src="img/logo.png" style="width: 13em; float: left; padding: 1em; padding-top: 0;">
+            <p style="margin-left: 25%;"> RiverPay’s services are fully PCI compliant - card data is tokenized and never exposed during transactions. As RiverPay’s major partners, Alipay and WeChat Pay are the first mobile payment applications in the world to obtain both ISO27001 and TRUSTe certifications to eradicate fraud or chargeback.</p>
         </div>
       
   </section>
