--- a/about.html
+++ b/about.html
@@ -45,10 +45,10 @@
               <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Career</a>
+            <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
           </li>
         </ul>
       </div>
@@ -146,7 +146,7 @@
       </div>
     </div>
     <hr>
-    <img src="img/about/abt_logos.jpg" style="margin: auto; display: block; max-width:">
+    <img src="img/about/abt_logos.jpg" style="margin: auto; display: block;">
   </section>
 
   <!-- Contact -->
