--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h3 class="section-subheading text-muted">Feel free to contact us.</h3>
+          <h3 class="section-subheading" style="color: white;">Feel free to contact us with anything related to our products/services. We’ll respond as soon as possible.</h3>
         </div>
       </div>
       <div class="row">
