--- a/career.html
+++ b/career.html
@@ -113,6 +113,8 @@
             <ul>Self-starter who is ready to dive in right away and start pitching.</ul>
             <ul>An understanding of data and how to use it to enhance media stories.</ul>
             <ul>Excellent writing and communication skills.</ul>
+            <a href="mailto:wendy.yang@riverpayment.com?Subject=Job%20Application" target="_top" style="text-align: center; color: black; display: block; padding-top: 2em; text-decoration: underline;">Email us your application</a>
+
     </div>
 
     <div id="amID">
@@ -129,7 +131,6 @@
              <ul>You will be digging through our data trends to find stories to pitch media.</ul>
              <ul>Analyze and report media coverage.</ul>
              <ul>Look into conferences where we can speak and apply for opportunities.</ul>
-             <a href="mailto:wendy.yang@riverpayment.com?Subject=Job%20Application" target="_top">Email us your application</a>
             <br>
             <p>Your experience must include the following:</p>
             <ul>Fluency in English and Chinese Mandarin.</ul>
@@ -139,7 +140,7 @@
             <ul>Self-starter who is ready to dive in right away and start pitching.</ul>
             <ul>An understanding of data and how to use it to enhance media stories.</ul>
             <ul>Excellent writing and communication skills.</ul>
-            <a href="mailto:wendy.yang@riverpayment.com?Subject=Job%20Application" target="_top">Email us your application</a>
+            <a href="mailto:wendy.yang@riverpayment.com?Subject=Job%20Application" target="_top" style="text-align: center; color: black; display: block; padding-top: 2em; text-decoration: underline;">Email us your application</a>
             </div>
 
     <div id="chinID">
@@ -156,7 +157,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h3 class="section-subheading text-muted">Feel free to contact us.</h3>
+          <h3 class="section-subheading" style="color: white;">Feel free to contact us with anything related to our products/services. We’ll respond as soon as possible.</h3>
         </div>
       </div>
       <div class="row">
