--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
   </header>
 
   <!-- Services -->
-  <section id="services">
+  <section id="services" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -97,7 +97,7 @@
   </section>
 
   <!-- Portfolio Grid -->
-  <section class="bg-light" id="portfolio">
+  <section id="portfolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
