--- a/service.html
+++ b/service.html
@@ -45,10 +45,10 @@
               <a class="nav-link js-scroll-trigger" href="service.html" style="color: #13AAE0;">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -103,7 +103,7 @@
           <p style="margin-left: 25%;"> RiverPay offers multiple standalone point-of-sale terminals and integrated solutions directly into existing cashier systems for merchants to use right away. Integration will be completed in real time and there is no need to worry about reconciliation.</p>
         </div>
         <div class="online-soln" style="padding: 3em;"> 
-          <h5 style="font-weight: 100; padding: 1em;">In Store Solutions</h5>
+          <h5 style="font-weight: 100; padding: 1em;">Online Solutions</h5>
           <img src="img/service/web.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
           <p style="margin-left: 25%;"> RiverPay offers a full set of online API gateway to support all website or mobile payment needs. Upon enrollment, RiverPay will provide dedicated technical support to guide the setup and a typical e-commerce or m-commerce integration takes less than a week.</p>
         </div>
