--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Agency - Start Bootstrap Theme</title>
+  <title>RiverPayment Home</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,8 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/agency.min.css" rel="stylesheet">
+  <link href="css/about.css" rel="stylesheet">
+
 
 </head>
 
@@ -38,13 +39,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+            <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#team">Team</a>
@@ -58,12 +59,12 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead">
+  <header class="masthead" style="background-image: url('./img/bg.jpg');">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Grow your business through 1 billion Chinese Consumers with</div>
-        <div class="intro-heading text-uppercase" style="color: #45aed6">RiverPay</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" style="background-color: #45aed6; border-color: #45aed6;" href="#services">Tell Me More</a>
+        <div class="intro-lead-in" style="color: white">Grow your business through 1 billion Chinese Consumers with</div>
+        <div class="intro-heading text-uppercase" style="color: #45aed6; font-size: xx-large"><img src="img/logos/rplogo.png"></div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" style="background-color: #45aed6; border-color: #45aed6;" href="about.html">Tell Me More</a>
       </div>
     </div>
   </header>
