--- a/career.html
+++ b/career.html
@@ -69,12 +69,17 @@
   <!-- Services -->
   <section id="services">
     <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading text-uppercase">Open Positions</h2>
+            </div>
+        </div>
+
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <button id="button" onclick="myFunction1()" style="border: none; background-color: white;"><img src="img/Career/canada.png" style="max-width: 100%;"></button>
           </span>
-          
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
