--- a/contact.html
+++ b/contact.html
@@ -57,12 +57,52 @@
 
   <!-- Services -->
   <section id="services" class="bg-light">
-    <div class="container">
+    <div class="container" >
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact us</h2>
         </div>
       </div>
+      <div class="container" style="padding: 0">
+        <div class="row">
+          <div class="col-lg-4 col-md-4 col-xs-4 thumb">
+            <div class="card">
+              <div class="thumbnail text-center text-white">
+                <img class="card-img-top" style="opacity: 0.5" src="img/contact/canada_toronto.jpg" alt="">
+                <div class="caption">
+                  <p>Toronto, Canada</p>
+                </div>
+              </div>
+              <div class="card-body">
+                <p class="card-text text-center">5045 Orbitor Drive.<br>
+                  Mississauga, Ontario. <br> L4W 4Y4, Canada.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-xs-4 thumb">
+            <div class="card">
+              <div class="thumbnail text-center text-white">
+                <img class="card-img-top" style="opacity: 0.5" src="img/contact/cali_fremont.jpeg" alt="">
+                <div class="caption">
+                  <p>California, USA</p>
+                </div>
+              </div>
+              <div class="card-body">
+                <p class="card-text text-center">5045 Orbitor Drive.<br>
+                  Mississauga, Ontario. <br> L4W 4Y4, Canada.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-xs-4 thumb">
+            <a class="thumbnail" href="#">
+              <img class="img-fluid" src="img/contact/canada_toronto.jpg" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <br>
+      <br>
       <div class="container shadow-sm" style="background-color: white">
         <div class="row">
           <div class="col-md-6" style="padding: 5%">
