--- a/contact.html
+++ b/contact.html
@@ -133,8 +133,7 @@
             <textarea class="form-control input-bg" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
             <p class="help-block text-danger"></p>
           </div>
-          <div class="form-group">
-            <div id="success"></div>
+          <div class="form-group text-center">
             <button id="sendMessageButton" class="btn btn-primary btn-sm" type="submit">Submit</button>
           </div>
         </div>
