fixed mobile view

--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
       </div>
     </div>
     <hr>
-    <img src="img/about/abt_logos.jpg" style="margin: auto; display: block;">
+    <img src="img/about/abt_logos.jpg" style="margin: auto; display: block; width: 90%;">
   </section>
 
   <!-- Footer -->
