--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/about.css" rel="stylesheet">
+  <link rel="icon" type="image/gif/png" href="img/logo.png">
 
 
 </head>
